--- a/whatshot/app/views/layouts/application.html.erb
+++ b/whatshot/app/views/layouts/application.html.erb
@@ -5,8 +5,10 @@
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
   <![endif]-->
+
+  <%= stylesheet_link_tag 'https://api.tiles.mapbox.com/mapbox.js/v2.0.0/mapbox.css' %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -36,13 +38,20 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="span3"></div>
-			<div class="span9">
+			<div class="span6">
         <%= render partial: "layouts/flash_messages", flash: flash %> 
-				<%= yield %>
+        <%= yield %>   
+      </div>
+			<div class="span6">
+        <div id="map">
+          
+        </div>
 			</div>
 		</div>
 	</div>
 
+  <%= javascript_include_tag 'https://api.tiles.mapbox.com/mapbox.js/v2.0.0/mapbox.js' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  
 </body>
 </html>
