--- a/whatshot/app/views/layouts/application.html.erb
+++ b/whatshot/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand" href="#">WhatsHOT!</a>
+        <a class="brand" href="users/index">WhatsHOT!</a>
         <div class="nav-collapse">
           <ul class="nav">
             <li><%= link_to "Browse Products" %></li>
@@ -40,12 +40,23 @@
 		<div class="row">
 			<div class="span6">
         <%= render partial: "layouts/flash_messages", flash: flash %> 
+
+        <div id="nav">
+        <% if current_user %>
+          Logged in as <%= current_user.email %>.
+          <%= link_to "Edit Profile", edit_user_path(current_user.id) %> ||
+          <%= link_to "Logout", :logout, method: :post %>
+        <% else %>
+          <%= link_to "Register", new_user_path %> ||
+          <%= link_to "Login", :login %>
+        <% end %>
+        </div>
+
         <%= yield %>   
       </div>
 			<div class="span6">
-        <div id="map">
-          
-        </div>
+        <!-- TO RENDER MAP -->
+        <div id="map"></div>
 			</div>
 		</div>
 	</div>
