--- a/whatshot/app/assets/stylesheets/application.css
+++ b/whatshot/app/assets/stylesheets/application.css
@@ -14,124 +14,27 @@
  *= require_self
  */
 
-#wrapper {
-    padding-left: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
+ /* body { margin:0; padding:0; 
+    border: 0; vertical-align: baseline; }*/
 
-#wrapper.toggled {
-    padding-left: 250px;
-}
+#map { position:fixed; top:0; bottom:0; width:100%; 
+       min-width: 260px; cursor: default; z-index: -1; }
 
-#sidebar-wrapper {
+.sidebar {
     z-index: 1000;
-    position: fixed;
-    left: 250px;
-    width: 0;
+    /*position: absolute;*/
+    width: 400px;
     height: 100%;
-    margin-left: -250px;
-    overflow-y: auto;
-    background: #FFF;
+    left: 1.1%;
+    min-width: 195px;
+    background-color: white;
+    overflow: auto;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
 }
 
-#wrapper.toggled #sidebar-wrapper {
-    width: 250px;
-}
-
-#page-content-wrapper {
-    width: 100%;
-    padding: 15px;
-}
-
-#wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -250px;
-}
-
-/* Sidebar Styles */
-
-.sidebar-nav {
-    position: absolute;
-    top: 0;
-    width: 250px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
-}
-
-.sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    color: #00F;
-}
-
-.sidebar-nav li a:hover {
-    text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
-}
-
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-    text-decoration: none;
-}
-
-.sidebar-nav > .sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
-}
-
-.sidebar-nav > .sidebar-brand a {
-    color: #999999;
-}
-
-.sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
-}
-
-@media(min-width:768px) {
-    #wrapper {
-        padding-left: 250px;
-    }
-
-    #wrapper.toggled {
-        padding-left: 0;
-    }
-
-    #sidebar-wrapper {
-        width: 250px;
-    }
-
-    #wrapper.toggled #sidebar-wrapper {
-        width: 0;
-    }
-
-    #page-content-wrapper {
-        padding: 20px;
-    }
-
-    #wrapper.toggled #page-content-wrapper {
-        position: relative;
-        margin-right: 0;
-    }
-}
-
- body { margin:0; padding:0; 
- 	border: 0; vertical-align: baseline; }
-
- #map { position:fixed; top:0; bottom:0; width:100%; 
-	min-width: 260px; cursor: default; }
+/* FOR MEDIA QUERY EFFECT*/
+/*    width: 100%;
+    margin-top: 500px;*/
