--- a/whatshot/app/assets/stylesheets/application.css
+++ b/whatshot/app/assets/stylesheets/application.css
@@ -14,27 +14,150 @@
  *= require_self
  */
 
- /* body { margin:0; padding:0; 
-    border: 0; vertical-align: baseline; }*/
+.modal { position: absolute; }
 
-#map { position:fixed; top:0; bottom:0; width:100%; 
-       min-width: 260px; cursor: default; z-index: -1; }
-
-.sidebar {
-    z-index: 1000;
-    /*position: absolute;*/
-    width: 400px;
-    height: 100%;
-    left: 1.1%;
-    min-width: 195px;
-    background-color: white;
-    overflow: auto;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+/*TO CENTER STUFF*/
+ * {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    vertical-align: middle;
 }
 
-/* FOR MEDIA QUERY EFFECT*/
-/*    width: 100%;
-    margin-top: 500px;*/
+    body {
+      color:#404040;
+      font:400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
+      margin:0;
+      padding:0;
+      -webkit-font-smoothing:antialiased;
+      }
+    * {
+      -webkit-box-sizing:border-box;
+         -moz-box-sizing:border-box;
+              box-sizing:border-box;
+      }
+    h1 {
+      font-size:22px;
+      margin:0;
+      font-weight:400;
+      }
+    a {
+      color:#404040;
+      text-decoration:none;
+      }
+      a:hover { color:#101010; }
+
+    .sidebar {
+      position:absolute;
+      width:22.2222%;
+      height:100%;
+      top:0;left:0;
+      overflow:auto;
+      border-right:1px solid rgba(0,0,0,0.25);
+      }
+    .pad2 {
+      padding:20px;
+      }
+    .quiet {
+      color:#888;
+      }
+    .map {
+      position:absolute;
+      left:22.2222%;
+      width:77.7777%;
+      top:0;bottom:0;
+      }
+
+    .search {
+      cursor: pointer;
+      display: block;
+      float: center;
+      z-index: 100;
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      /*width: 50%;
+      height: 50%
+      padding: 20px;*/
+    }
+
+    .heading {
+      background:#fff;
+      border-bottom: 1px solid #eee;
+      /*height:100px;
+      line-height:60px;*/
+      padding:0 10px;
+      }
+    .listings {
+      height:100%;
+      padding-top: 10px;
+      overflow:auto;
+      padding-bottom:60px;
+      }
+    .listings .item {
+      display:block;
+      border-bottom:1px solid #eee;
+      padding:10px;
+      text-decoration:none;
+      }
+      .listings .item:last-child { border-bottom:none; }
+      .listings .item .title {
+        display:block;
+        color:#00853e;
+        font-weight:700;
+        }
+        .listings .item .title small { font-weight:400; }
+        .listings .item.active .title,
+        .listings .item .title:hover { color:#8cc63f; }
+        .listings .item.active {
+          background-color:#f8f8f8;
+          }
+
+      ::-webkit-scrollbar {
+        width:3px;
+        height:3px;
+        border-left:0;
+        background:rgba(0,0,0,0.1);
+        }
+      ::-webkit-scrollbar-track {
+        background:none;
+        }
+      ::-webkit-scrollbar-thumb {
+        background:#0000FF;
+        border-radius:0;
+        }
+
+    .clearfix { display:block; }
+    .clearfix:after {
+      content:'.';
+      display:block;
+      height:0;
+      clear:both;
+      visibility:hidden;
+      }
+
+    /* Marker tweaks */
+    .leaflet-popup-close-button {
+      display:none;
+      }
+    .leaflet-popup-content {
+      font:400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
+      padding:0;
+      width:200px;
+      }
+      .leaflet-popup-content-wrapper {
+        padding:0;
+        }
+      .leaflet-popup-content h3 {
+        background:#0000FF;
+        color:#fff;
+        margin:0;
+        display:block;
+        padding:10px;
+        border-radius:3px 3px 0 0;
+        font-weight:700;
+        }
+      .leaflet-popup-content div {
+        padding:10px;
+        }
+      .leaflet-container .leaflet-marker-icon { cursor:pointer; }
