--- a/whatshot/app/views/comments/_comment.html.erb
+++ b/whatshot/app/views/comments/_comment.html.erb
@@ -1,8 +1,8 @@
 <%= div_for comment do %>
 <p>
 	<%= comment.body %> <br>
-	<strong> <%#= comment.user.id %> </strong> posted <br>
-	<%= time_ago_in_words(comment.created_at) %> ago
+	<strong> <%= comment.user.email %> </strong> posted <br>
+	<%= time_ago_in_words(comment.created_at) %> ago <br>
 <% end %>
 </p>
 
@@ -10,7 +10,7 @@
 <%= pluralize comment.votes, "vote" %>
 
 <% if current_user && current_user.can_vote_for?(comment) %>
-		| <%= link_to "up", vote_path(comment, value: 1), method: "post" %>
-		| <%= link_to "down", vote_path(comment, value: -1), method: "post" %>
+	<%= link_to (image_tag "like.jpg", size: "20"), vote_path(comment, value: 1), method: "post", remote: true %>
+	<%= link_to (image_tag "dislike.jpg", size: "20"), vote_path(comment, value: -1), method: "post", remote: true %>
 <% end %>
 </p>
