--- a/whatshot/app/views/layouts/application.html.erb
+++ b/whatshot/app/views/layouts/application.html.erb
@@ -1,35 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>WhatsHOT!</title>
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
   <![endif]-->
 
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet'>
   <%= stylesheet_link_tag 'https://api.tiles.mapbox.com/mapbox.js/v2.0.0/mapbox.css' %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-
   <%= csrf_meta_tags %>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
-<div id="map"></div>
-
 <div class="sidebar">
-  <%= render partial: "layouts/flash_messages", flash: flash %>
-
+  <div class="heading">
+    <!-- <h1><strong>WhatsHOT!</strong></h1> -->
+  <%= link_to (image_tag "logo.jpg"), root_url %> <br>
   <% if current_user %>
     Logged in as <%= current_user.email %>. <br>
-    <%= link_to "Edit Profile", edit_user_path(current_user.id) %> ||
-    <%= link_to "Logout", :logout, method: :post %> <br>
+    <%= link_to "Edit Profile", edit_user_path(current_user.id), remote: true, class: "btn btn-primary" %>
+    <%= link_to "Logout", :logout, remote: true, method: :post, class: "btn btn-primary" %> <br>
     <%#= current_user.total_votes %>
   <% else %>
-    <%= link_to "Register", new_user_path %> ||
-    <%= link_to "Login", :login %>
+    <%= link_to "Register", new_user_path, remote: true, class: "btn btn-primary" %>
+    <%= link_to "Login", :login, remote: true, class: "btn btn-primary" %>
   <% end %>
-    
-  <%= yield %> 
+  <%= render partial: "layouts/flash_messages", flash: flash %>
+  <%= bootstrap_flash %>
+  </div>
+
+  <div id="listings" class="listings">
+  <%= yield %>
+  </div>
+</div>
+
+<div id="map" class="map">
+  <div class="search">
+    <%= form_tag locations_path, :method => :get do %>
+    <p>
+      <%= text_field_tag :search, params[:search], :class => 'span4 search-query' %>
+      <%= submit_tag "Search Near", :name => nil, :class => 'btn btn-primary'  %>
+    </p>
+    <% end %>
+  </div>
+</div>
+
+<div id="product-modal" class="modal fade">
+  <div class="modal-dialog">
+    <div id="inner-product-modal" class="modal-content"></div>
+  </div>
 </div>
 
   <%= javascript_include_tag 'https://api.tiles.mapbox.com/mapbox.js/v2.0.0/mapbox.js' %>
