--- a/whatshot/app/views/locations/_form.html.erb
+++ b/whatshot/app/views/locations/_form.html.erb
@@ -1,26 +1,15 @@
-<%= form_for @location, :html => { :class => 'form-horizontal' } do |f| %>
-  <div class="control-group">
-    <%= f.label :address, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :address, :class => 'text_field' %>
+<%= form_for(@location, remote: true) do |f| %>
+  <div class="modal-body">
+    <ul class="errors"></ul>  
+    <div class="control-group">
+      <%= f.text_field :address, placeholder: "address" %> <br>
+      <%= f.text_field :latitude, placeholder: "latitude" %> <br>
+      <%= f.text_field :longitude, placeholder: "longitude" %> <br>
     </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :latitude, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :latitude, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :longitude, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :longitude, :class => 'text_field' %>
-    </div>
-  </div>
 
-  <div class="form-actions">
-    <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                locations_path, :class => 'btn' %>
+    <div class="modal-footer">
+      <%= submit_tag "New Location", class: "btn btn-primary" %>
+      <%= link_to "Cancel", "#", class: "btn", data: { dismiss: "modal" } %>
+    </div>
   </div>
 <% end %>
