--- a/whatshot/app/views/locations/index.html.erb
+++ b/whatshot/app/views/locations/index.html.erb
@@ -1,46 +1,53 @@
 <%- model_class = Location -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-</div>
 
-<%= form_tag locations_path, :method => :get do %>
-  <p>
-    <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search Near", :name => nil, :class => 'btn btn-primary'  %>
-  </p>
-<% end %>
-
-<table class="table table-striped">
+<!-- Locations Table -->
+<table class="table table-striped" ng-app="whatshot" ng-controller="ListCtrl">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:address) %></th>
-      <th><%= model_class.human_attribute_name(:latitude) %></th>
-      <th><%= model_class.human_attribute_name(:longitude) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th><%= model_class.human_attribute_name(:location) %></th>
+      <th><%= model_class.human_attribute_name(:rating) %></th>
+      <!-- <th><%#=t '.actions', :default => t("helpers.actions") %></th> -->
+      <th><%= model_class.human_attribute_name(:ratio) %></th>
     </tr>
   </thead>
   <tbody>
     <% @locations.each do |location| %>
       <tr>
-        <td><%= location.address %></td>
-        <td><%= location.latitude %></td>
-        <td><%= location.longitude %></td>
+        <td><%= link_to location.address, location_path(location), remote: true %></td>
+        <!-- <td><%#= link_to location.address, :action => 'show', :id => location.id %></td> -->
+        <!-- <td><%= link_to location.comments.count, location_comments_path(location) %></td> -->
         <td>
-          <%= link_to t('.show', :default => t("helpers.links.show")),
+            <% if location.comments.last and location.comments.last.hot == false %>
+              <%= link_to (image_tag "cold.png", size: "50"), location_comments_path(location), remote: true %>
+            <% elsif location.comments.last and location.comments.last.hot == true %>
+              <%= link_to (image_tag "hot.png", size: "50"), location_comments_path(location), remote: true %>
+            <% else %>
+            <%= link_to (image_tag "logo.jpg", size: "80"), location_comments_path(location), remote: true %>
+            <% end %>
+        </td>
+        <td><% if location.comments.last and location.comments.last.ratio == 0 %>
+              <%= link_to (image_tag "girls.jpg", size: "30"), location_comments_path(location), remote: true %>
+            <% elsif location.comments.last and location.comments.last.ratio == 1 %>
+              <%= link_to (image_tag "guys.jpg", size: "30"), location_comments_path(location), remote: true %>
+            <% else %>
+            <%= link_to (image_tag "logo.jpg", size: "80"), location_comments_path(location), remote: true %>
+            <% end %>
+        </td>
+<!--         <td>
+          <%#= link_to t('.show', :default => t("helpers.links.show")),
                       location, :class => 'btn btn-mini' %>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+          <%#= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_location_path(location), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+          <%#= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       location_path(location),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
-        </td>
+        </td> -->
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_location_path,
-            :class => 'btn btn-primary' %>
+<%= link_to "New Location", new_location_path, remote: true,
+            class: 'btn btn-primary' %>
