--- a/whatshot/app/views/users/_form.html.erb
+++ b/whatshot/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user) do |f| %>
+<%= form_for(@user, remote: true) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -11,19 +11,13 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
+  <div class="control-group">
+    <%= f.text_field :email, placeholder: "email" %> <br>
+    <%= f.password_field :password, placeholder: "password" %> <br>
+    <%= f.password_field :password_confirmation, placeholder: "password confirmation" %> <br>
   </div>
-<div class="field">
-   <%= f.label :password %><br />
-   <%= f.password_field :password %>
-</div>
-<div class="field">
-   <%= f.label :password_confirmation %><br />
-   <%= f.password_field :password_confirmation %>
-</div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="modal-footer">
+    <%= f.submit class: "btn btn-primary" %>
+    <%= link_to "Cancel", "#", class: "btn", data: { dismiss: "modal" } %>
   </div>
 <% end %>
