--- a/whatshot/app/views/locations/_show.html.erb
+++ b/whatshot/app/views/locations/_show.html.erb
@@ -14,14 +14,14 @@
 
 <%= link_to "Comments", location_comments_path(@location), class: "btn btn-primary" %>
 
-<div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
+<!-- <div class="form-actions">
+  <%#= link_to t('.back', :default => t("helpers.links.back")),
               locations_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+  <%#= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_location_path(@location), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+  <%#= link_to t('.destroy', :default => t("helpers.links.destroy")),
               location_path(@location),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
-</div>
+</div> -->
